# bkupman

./: Cargo.toml  LICENSE  README.md  design.md
.github/workflows/: rust.yml
design/: design.md
src/: commands.rs  cryptutil.rs  lib.rs  main.rs  util.rs
src/commands/: crypt.rs  inbox.rs  init.rs  key.rs  test_file.rs
tests/: integration.rs
workspace/: .gitignore  .gitkeep
