[package]
name = "bkupman"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.86"
argon2 = "0.5.3"
base64 = "0.22.1"
bytes = "1.6.0"
chrono = "0.4.38"
dialoguer = { version = "0.11.0", features = ["password"], default-features = false }
fs2 = "0.4.3"
getopts = "0.2.21"
log = "0.4.21"
md-5 = "0.10.6"
rand = "0.8.5"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
simplelog = "0.12.2"
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.38.0", features = ["fs", "macros", "rt-multi-thread", "time", "io-util"] }
toml = "0.8.14"

[dev-dependencies]
serial_test = "3.1.1"
tempdir = "0.3.7"
